cmake_minimum_required(VERSION 3.28)
project(xes)

set(CMAKE_CXX_STANDARD 20)

add_executable(xes day0/main.cpp
        day0/main.cpp
        day0/main1.cpp
        day0/main2.cpp
        day0/main3.cpp
        day0/main4.cpp
        day1/main.cpp
        day1/main1.cpp
        day1/main2.cpp
        day1/main3.cpp
        day1/main4.cpp
        day1/main5.cpp
        day1/main6.cpp
        day1/main7.cpp
        day1/main8.cpp
        day1/main9.cpp
        day1/main10.cpp
        day1/main11.cpp
        note/D1.cpp
        day1/main12.cpp
        day1/test/1.cpp
        day1/test/2.cpp
        day1/test/3.cpp
        day1/test/4.cpp
        day2/main1.cpp
        day2/main2.cpp
        day2/main3.cpp
        day2/test/1.cpp
        note/D2.cpp
        day2/main7.cpp
        day2/main4.cpp
        day3/main1.cpp
        day3/main2.cpp
        day3/test/1.cpp
        note/D3.cpp
        day2/main5.cpp
        day2/main8.cpp
        day2/main6.cpp
        day2/main9.cpp
        day2/main10.cpp
        day3/test/2.cpp
        day3/test/3.cpp
        day3/test/4.cpp
        day3/main3.cpp
        day3/main4.cpp
        day3/main5.cpp
        day3/main6.cpp
        day3/main7.cpp
        day3/main8.cpp
        day3/main9.cpp
        day3/main10.cpp
        day3/main11.cpp
        day3/main12.cpp
        day3/main13.cpp
        day3/main14.cpp
        note/D4.cpp
        day4/main1.cpp
        day4/main2.cpp
        day4/main3.cpp
        day4/main4.cpp
        day4/main5.cpp
        day4/main6.cpp
        day4/test/1.cpp
        day4/test/2.cpp
        day4/test/3.cpp
        day4/test/4.cpp
        note/D5.cpp
        day5/main1.cpp
        day5/main2.cpp
        day5/main3.cpp
        day5/main4.cpp
        day5/main5.cpp
        day5/main7.cpp
        day5/main6.cpp
        day5/main8.cpp
        day5/test/2.cpp)
